--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-query": "^5.67.2",
+    "axios": "^1.8.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
